Enemy and Character Classes Added
2.06 Added Enemy and Character derived from base character

--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment
 PreviewMeshCollection=
 MaterialInstanceConstant=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -614,8 +614,8 @@ PrimitiveComponent="\"Object\" "
 LandscapeComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-DebuggerAttached=True
+CleanShutdown=True
+DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
 
 [ContentBrowser]
@@ -631,7 +631,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Characters/Aura
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public/Character
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1772,7 +1772,7 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1313.200 Y=753.200
+WindowSize=X=1320.400 Y=760.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2911,8 +2911,22 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.06-21.22.37
+Aura.TimeStamp=2023.12.06-21.45.21
 Aura.LastCompileMethod=External
+RD.TimeStamp=2023.12.06-20.41.22
+RD.LastCompileMethod=Unknown
+RiderLink.TimeStamp=2023.12.06-20.41.38
+RiderLink.LastCompileMethod=Unknown
+RiderLogging.TimeStamp=2023.12.06-20.41.50
+RiderLogging.LastCompileMethod=Unknown
+RiderBlueprint.TimeStamp=2023.12.06-20.41.50
+RiderBlueprint.LastCompileMethod=Unknown
+RiderGameControl.TimeStamp=2023.12.06-20.41.52
+RiderGameControl.LastCompileMethod=Unknown
+RiderShaderInfo.TimeStamp=2023.12.06-20.41.27
+RiderShaderInfo.LastCompileMethod=Unknown
+RiderLC.TimeStamp=2023.12.06-20.41.38
+RiderLC.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
