--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -632,17 +632,40 @@ CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 BP_AuraCharacter_C="\"Object\" "
 AuraCharacter="\"Object\" "
+ABP_AuraCharacter_C="\"Object\" "
+AnimInstance="\"Object\" "
+AnimGraphNode_StateMachine="\"Object\" "
+AnimGraphNode_StateMachineBase="\"Object\" "
+AnimGraphNode_Base="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+AnimStateNode="\"Object\" "
+AnimStateNodeBase="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
+MovementComponent="\"Object\" "
+ABP_Enemy_C="\"Object\" "
+EditorParentPlayerListObj="\"Object\" "
+ABP_Goblin_Spear_C="\"Object\" "
+BP_Goblin_Slingshot_C="\"Object\" "
+ABP_Goblin_Slingshot_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter
 OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear
+OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot.BP_Goblin_Slingshot
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -657,7 +680,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Character/Aura
+ContentBrowserDrawer.SelectedPaths=/Game/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1571,6 +1594,95 @@ BP_Goblin_Spear_C.Networking=True
 BP_AuraCharacter_C.Combat=True
 BP_AuraCharacter_C.Networking=True
 BP_AuraCharacter_C.Materials=True
+ABP_AuraCharacter_C.RootMotion=True
+ABP_AuraCharacter_C.Notifies=True
+ABP_AuraCharacter_C.Montage=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_StateMachine.Functions=True
+AnimGraphNode_StateMachine.Tag=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+ABP_Enemy_C.RootMotion=True
+ABP_Enemy_C.Notifies=True
+ABP_Enemy_C.Montage=True
+ABP_Goblin_Spear_C.Default=True
+ABP_Goblin_Spear_C.RootMotion=True
+ABP_Goblin_Spear_C.Notifies=True
+ABP_Goblin_Spear_C.Montage=True
+EditorParentPlayerListObj.AnimGraphOverrides=True
+BP_Goblin_Slingshot_C.TransformCommon=True
+BP_Goblin_Slingshot_C.Animation=True
+BP_Goblin_Slingshot_C.Mesh=True
+BP_Goblin_Slingshot_C.Tick=True
+BP_Goblin_Slingshot_C.ComponentTick=True
+BP_Goblin_Slingshot_C.Clothing=True
+BP_Goblin_Slingshot_C.Physics=True
+BP_Goblin_Slingshot_C.LeaderPoseComponent=True
+BP_Goblin_Slingshot_C.Collision=True
+BP_Goblin_Slingshot_C.Lighting=True
+BP_Goblin_Slingshot_C.AnimationRig=True
+BP_Goblin_Slingshot_C.Deformer=True
+BP_Goblin_Slingshot_C.SkinWeights=True
+BP_Goblin_Slingshot_C.Rendering=True
+BP_Goblin_Slingshot_C.HLOD=True
+BP_Goblin_Slingshot_C.PathTracing=True
+BP_Goblin_Slingshot_C.Mobile=True
+BP_Goblin_Slingshot_C.Navigation=True
+BP_Goblin_Slingshot_C.RayTracing=True
+BP_Goblin_Slingshot_C.VirtualTexture=True
+BP_Goblin_Slingshot_C.Tags=True
+BP_Goblin_Slingshot_C.AssetUserData=True
+BP_Goblin_Slingshot_C.Replication=True
+BP_Goblin_Slingshot_C.ComponentReplication=True
+BP_Goblin_Slingshot_C.Activation=True
+BP_Goblin_Slingshot_C.Variable=True
+BP_Goblin_Slingshot_C.Cooking=True
+BP_Goblin_Slingshot_C.Character Movement (General Settings)=True
+BP_Goblin_Slingshot_C.Character Movement: Walking=True
+BP_Goblin_Slingshot_C.Character Movement: Jumping / Falling=True
+BP_Goblin_Slingshot_C.Character Movement: Gravity=True
+BP_Goblin_Slingshot_C.Character Movement (Networking)=True
+BP_Goblin_Slingshot_C.Character Movement: Swimming=True
+BP_Goblin_Slingshot_C.Character Movement: Flying=True
+BP_Goblin_Slingshot_C.Character Movement: Custom Movement=True
+BP_Goblin_Slingshot_C.Character Movement (Rotation Settings)=True
+BP_Goblin_Slingshot_C.Character Movement: Physics Interaction=True
+BP_Goblin_Slingshot_C.Character Movement=True
+BP_Goblin_Slingshot_C.Character Movement: Avoidance=True
+BP_Goblin_Slingshot_C.RootMotion=True
+BP_Goblin_Slingshot_C.Character Movement: NavMesh Movement=True
+BP_Goblin_Slingshot_C.NavMovement=True
+BP_Goblin_Slingshot_C.Velocity=True
+BP_Goblin_Slingshot_C.PlanarMovement=True
+BP_Goblin_Slingshot_C.MovementComponent=True
+BP_Goblin_Slingshot_C.Shape=True
+BP_Goblin_Slingshot_C.Character=True
+BP_Goblin_Slingshot_C.Camera=True
+BP_Goblin_Slingshot_C.Pawn=True
+BP_Goblin_Slingshot_C.Actor=True
+BP_Goblin_Slingshot_C.Input=True
+BP_Goblin_Slingshot_C.WorldPartition=True
+BP_Goblin_Slingshot_C.Events=True
+BP_Goblin_Slingshot_C.Materials=True
+ABP_Goblin_Slingshot_C.Default=True
+ABP_Goblin_Slingshot_C.RootMotion=True
+ABP_Goblin_Slingshot_C.Notifies=True
+ABP_Goblin_Slingshot_C.Montage=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1775,6 +1887,11 @@ MRUItem19=/Game/Assets/Enemies/Shaman/ShamanStaff/PA_ShamanStaff
 /Game/Assets/Enemies/Goblin/SKM_Goblin.SKM_Goblin=0
 /Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter=0
 /Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear=0
+/Game/Blueprints/Character/ABP_Enemy.ABP_Enemy=0
+/Game/Blueprints/Character/Aura/ABP_AuraCharacter.ABP_AuraCharacter=0
+/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear.ABP_Goblin_Spear=0
+/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot.ABP_Goblin_Slingshot=0
+/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot.BP_Goblin_Slingshot=0
 
 [MaterialEditor]
 PrimType=3
@@ -1951,10 +2068,12 @@ Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1327.600 Y=767.600
+WindowSize=X=1331.200 Y=771.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3009,9 +3128,9 @@ MaterialEditor.TimeStamp=2023.04.01-00.12.43
 MaterialEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.04.05-16.11.43
 TextureEditor.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2023.09.17-21.28.01
+SkeletonEditor.TimeStamp=2023.11.25-05.20.37
 SkeletonEditor.LastCompileMethod=External
-PinnedCommandList.TimeStamp=2023.09.17-21.28.00
+PinnedCommandList.TimeStamp=2023.11.25-05.20.35
 PinnedCommandList.LastCompileMethod=External
 PhysicsAssetEditor.TimeStamp=2023.04.05-16.11.42
 PhysicsAssetEditor.LastCompileMethod=External
@@ -3229,11 +3348,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
-MRUItem1=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
-MRUItem2=/Game/Assets/Enemies/Goblin/SKM_Goblin
-MRUItem3=/Game/Assets/Characters/Aura/SKM_Aura
-MRUItem4=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem0=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
+MRUItem1=/Game/Assets/Enemies/Goblin/SKM_Goblin
+MRUItem2=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem3=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
+MRUItem4=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
+MRUItem5=/Game/Blueprints/Character/ABP_Enemy
+MRUItem6=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem7=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem8=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
+MRUItem9=/Game/Assets/Characters/Aura/SKM_Aura
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3340,4 +3464,7 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
