--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -389,6 +389,8 @@ GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowT
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 PersonaPreviewSceneAnimationController=
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/Input/InputActions/IA_Move.IA_Move
+InputAction=
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -566,7 +568,7 @@ MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 BoneProxy="\"Object\" "
 PhysicsAssetGenerationSettings="\"Object\" "
@@ -650,10 +652,14 @@ EditorParentPlayerListObj="\"Object\" "
 ABP_Goblin_Spear_C="\"Object\" "
 BP_Goblin_Slingshot_C="\"Object\" "
 ABP_Goblin_Slingshot_C="\"Object\" "
+InputAction="\"Object\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[1].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[2].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
@@ -664,8 +670,8 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear
-OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot.BP_Goblin_Slingshot
+OpenAssetsAtExit=/Game/Blueprints/Input/InputActions/IA_Move.IA_Move
+OpenAssetsAtExit=/Game/Blueprints/Input/IMC_AuraContext.IMC_AuraContext
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -680,7 +686,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1683,6 +1689,12 @@ ABP_Goblin_Slingshot_C.Default=True
 ABP_Goblin_Slingshot_C.RootMotion=True
 ABP_Goblin_Slingshot_C.Notifies=True
 ABP_Goblin_Slingshot_C.Montage=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1892,6 +1904,8 @@ MRUItem19=/Game/Assets/Enemies/Shaman/ShamanStaff/PA_ShamanStaff
 /Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear.ABP_Goblin_Spear=0
 /Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot.ABP_Goblin_Slingshot=0
 /Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot.BP_Goblin_Slingshot=0
+/Game/Blueprints/Input/InputActions/IA_Move.IA_Move=0
+/Game/Blueprints/Input/IMC_AuraContext.IMC_AuraContext=0
 
 [MaterialEditor]
 PrimType=3
@@ -2073,7 +2087,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1331.200 Y=771.200
+WindowSize=X=1334.800 Y=774.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3348,16 +3362,18 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
-MRUItem1=/Game/Assets/Enemies/Goblin/SKM_Goblin
-MRUItem2=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
-MRUItem3=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
-MRUItem4=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
-MRUItem5=/Game/Blueprints/Character/ABP_Enemy
-MRUItem6=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
-MRUItem7=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem8=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
-MRUItem9=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem0=/Game/Blueprints/Input/IMC_AuraContext
+MRUItem1=/Game/Blueprints/Input/InputActions/IA_Move
+MRUItem2=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
+MRUItem3=/Game/Assets/Enemies/Goblin/SKM_Goblin
+MRUItem4=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem5=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
+MRUItem6=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
+MRUItem7=/Game/Blueprints/Character/ABP_Enemy
+MRUItem8=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem9=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem10=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
+MRUItem11=/Game/Assets/Characters/Aura/SKM_Aura
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
