--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -399,7 +399,7 @@ LastLevel=/Game/Maps/MyMap1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -667,7 +667,7 @@ AnimGraphNode_SequencePlayer="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=True
+DebuggerAttached=False
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2193,7 +2193,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1352.800 Y=792.800
+WindowSize=X=1356.400 Y=796.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
