--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -392,6 +392,9 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 PersonaPreviewSceneAnimationController=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/Input/InputActions/IA_Move.IA_Move
 InputAction=
+SkeletalMeshComponent=BP_Goblin_Spear_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision
+BP_Goblin_Spear_C=BP_Goblin_Spear_C.Combat.Collision
+K2Node_VariableGet=BP_Goblin_Spear_C.Combat.Collision
 
 [EditorStartup]
 LastLevel=/Game/Maps/MyMap1
@@ -589,8 +592,8 @@ SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
 FbxImportUI="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 CollectionSettings="\"Object\" "
 RigVMEditorSettings="\"Object\" "
 InputModifierDeadZone="\"Object\" "
@@ -619,11 +622,11 @@ TakeRecorderMicrophoneAudioManager="\"Object\" \"Object.AudioInputDevice\" "
 TakeRecorderAudioInputSettings="\"Object\" \"Object.AudioInputDevice\" "
 LandscapeEditorObject="\"Object\" "
 LandscapeGizmoRenderComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 LandscapeComponent="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PersonaPreviewSceneAnimationController="\"Object\" "
 PersonaPreviewSceneController="\"Object\" "
 BP_Goblin_Spear_C="\"Object\" "
@@ -667,7 +670,8 @@ AnimGraphNode_SequencePlayer="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=False
+DebuggerAttached=True
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -676,7 +680,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -684,6 +687,7 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 OpenAssetsAtExit=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter
 OpenAssetsAtExit=/Game/Blueprints/Character/Aura/ABP_AuraCharacter.ABP_AuraCharacter
+OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -698,7 +702,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Character/Goblin_Spear
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1789,6 +1793,14 @@ AnimGraphNode_SequencePlayer.Functions=True
 AnimGraphNode_SequencePlayer.Settings=True
 AnimGraphNode_SequencePlayer.Tag=True
 AnimGraphNode_SequencePlayer.PoseMatching=True
+SkeletalMeshComponent.SkeletalMesh=True
+BP_Goblin_Spear_C.SkeletalMesh=True
+BP_Goblin_Spear_C.Optimization=True
+BP_Goblin_Spear_C.LOD=True
+BP_Goblin_Spear_C.MaterialParameters=True
+BP_Goblin_Spear_C.TextureStreaming=True
+BP_Goblin_Spear_C.LevelInstance=True
+BP_Goblin_Spear_C.AuraEnemy=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2193,7 +2205,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1356.400 Y=796.400
+WindowSize=X=1370.800 Y=810.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3332,7 +3344,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.07-20.05.28
+Aura.TimeStamp=2023.12.08-16.13.38
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.06-20.41.22
 RD.LastCompileMethod=Unknown
@@ -3472,15 +3484,15 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
-MRUItem1=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem2=/Game/Blueprints/Game/BP_AuraGameMode
-MRUItem3=/Game/Blueprints/Player/BP_AuraPlayerController
-MRUItem4=/Game/Blueprints/Input/IMC_AuraContext
-MRUItem5=/Game/Blueprints/Input/InputActions/IA_Move
-MRUItem6=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
-MRUItem7=/Game/Assets/Enemies/Goblin/SKM_Goblin
-MRUItem8=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem0=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem1=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem2=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem3=/Game/Blueprints/Game/BP_AuraGameMode
+MRUItem4=/Game/Blueprints/Player/BP_AuraPlayerController
+MRUItem5=/Game/Blueprints/Input/IMC_AuraContext
+MRUItem6=/Game/Blueprints/Input/InputActions/IA_Move
+MRUItem7=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
+MRUItem8=/Game/Assets/Enemies/Goblin/SKM_Goblin
 MRUItem9=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
 MRUItem10=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
 MRUItem11=/Game/Blueprints/Character/ABP_Enemy
@@ -3540,9 +3552,9 @@ bPreloadProjectPluginModules=True
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter;
-RecentlyPlaced=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear;
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
