--- a/Aura/Config/DefaultEngine.ini
+++ b/Aura/Config/DefaultEngine.ini
@@ -55,6 +55,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Aura")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
+SmallFontName=/Game/Assets/Fonts/David_Libre/DavidLibre-Regular_Font.DavidLibre-Regular_Font
+TinyFontName=/Game/Assets/Fonts/David_Libre/DavidLibre-Medium_Font.DavidLibre-Medium_Font
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
