--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -413,7 +413,7 @@ LastLevel=/Game/Maps/MyMap1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -695,10 +695,13 @@ AuraGameModeBase="\"Object\" "
 GameModeBase="\"Object\" "
 GameplayEffectCreationMenu="\"Object\" "
 DataRegistrySettings="\"Object\" "
+SphereComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=True
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -715,9 +718,7 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-OpenAssetsAtExit=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter
-OpenAssetsAtExit=/Game/Blueprints/Player/BP_AuraPlayerState.BP_AuraPlayerState
-OpenAssetsAtExit=/Game/Blueprints/Game/BP_AuraGameMode.BP_AuraGameMode
+OpenAssetsAtExit=/Game/Blueprints/Items/BP_HealthPotion.BP_HealthPotion
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -732,7 +733,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Items
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -973,6 +974,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -1948,7 +1950,66 @@ BP_AuraPlayerState_C.Physics=True
 BP_AuraPlayerState_C.Events=True
 GameplayEffectCreationMenu.Gameplay Effect=True
 DataRegistrySettings.Data Registry=True
-UMGEditorProjectSettings.Designer =True
+BP_HealthPotion_C.TransformCommon=True
+BP_HealthPotion_C.StaticMesh=True
+BP_HealthPotion_C.Tick=True
+BP_HealthPotion_C.Shape=True
+BP_HealthPotion_C.Navigation=True
+BP_HealthPotion_C.ComponentTick=True
+BP_HealthPotion_C.HLOD=True
+BP_HealthPotion_C.PathTracing=True
+BP_HealthPotion_C.Physics=True
+BP_HealthPotion_C.Collision=True
+BP_HealthPotion_C.Mobile=True
+BP_HealthPotion_C.Lighting=True
+BP_HealthPotion_C.RayTracing=True
+BP_HealthPotion_C.Rendering=True
+BP_HealthPotion_C.Tags=True
+BP_HealthPotion_C.AssetUserData=True
+BP_HealthPotion_C.Replication=True
+BP_HealthPotion_C.ComponentReplication=True
+BP_HealthPotion_C.Variable=True
+BP_HealthPotion_C.Cooking=True
+BP_HealthPotion_C.VirtualTexture=True
+BP_HealthPotion_C.Actor=True
+BP_HealthPotion_C.Input=True
+BP_HealthPotion_C.WorldPartition=True
+BP_HealthPotion_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+BP_HealthPotion_C.Materials=True
+BP_HealthPotion_C.Networking=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.PathTracing=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2255,6 +2316,7 @@ MRUItem19=/Game/Assets/Enemies/Shaman/ShamanStaff/PA_ShamanStaff
 /Game/Blueprints/Game/BP_AuraGameMode.BP_AuraGameMode=0
 /Game/Blueprints/Character/BP_EnemyBase.BP_EnemyBase=0
 /Game/Blueprints/Player/BP_AuraPlayerState.BP_AuraPlayerState=0
+/Game/Blueprints/Items/BP_HealthPotion.BP_HealthPotion=0
 
 [MaterialEditor]
 PrimType=3
@@ -2436,7 +2498,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=70.400 Y=14.400
-WindowSize=X=1414.000 Y=854.000
+WindowSize=X=1421.200 Y=861.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3575,7 +3637,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.14-17.38.45
+Aura.TimeStamp=2023.12.14-19.00.57
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.14-15.12.33
 RD.LastCompileMethod=External
@@ -3723,22 +3785,23 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Game/BP_AuraGameMode
-MRUItem1=/Game/Blueprints/Player/BP_AuraPlayerState
-MRUItem2=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem3=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
-MRUItem4=/Game/Blueprints/Character/BP_EnemyBase
-MRUItem5=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
-MRUItem6=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
-MRUItem7=/Game/Blueprints/Player/BP_AuraPlayerController
-MRUItem8=/Game/Blueprints/Input/IMC_AuraContext
-MRUItem9=/Game/Blueprints/Input/InputActions/IA_Move
-MRUItem10=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
-MRUItem11=/Game/Assets/Enemies/Goblin/SKM_Goblin
-MRUItem12=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
-MRUItem13=/Game/Blueprints/Character/ABP_Enemy
-MRUItem14=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
-MRUItem15=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem0=/Game/Blueprints/Items/BP_HealthPotion
+MRUItem1=/Game/Blueprints/Game/BP_AuraGameMode
+MRUItem2=/Game/Blueprints/Player/BP_AuraPlayerState
+MRUItem3=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem4=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
+MRUItem5=/Game/Blueprints/Character/BP_EnemyBase
+MRUItem6=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem7=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem8=/Game/Blueprints/Player/BP_AuraPlayerController
+MRUItem9=/Game/Blueprints/Input/IMC_AuraContext
+MRUItem10=/Game/Blueprints/Input/InputActions/IA_Move
+MRUItem11=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
+MRUItem12=/Game/Assets/Enemies/Goblin/SKM_Goblin
+MRUItem13=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
+MRUItem14=/Game/Blueprints/Character/ABP_Enemy
+MRUItem15=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
+MRUItem16=/Game/Assets/Characters/Aura/SKM_Aura
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3793,6 +3856,7 @@ bPreloadProjectPluginModules=True
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Items/BP_HealthPotion.BP_HealthPotion;
 RecentlyPlaced=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot.BP_Goblin_Slingshot;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear;
@@ -3851,4 +3915,7 @@ GraphEditorQuickJumps=()
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
