--- a/Aura/Saved/Config/WindowsEditor/Game.ini
+++ b/Aura/Saved/Config/WindowsEditor/Game.ini
@@ -36,4 +36,5 @@ DebugDisplay=abilitysystem
 DebugDisplay=abilitysystem
 DebugDisplay=abilitysystem
 DebugDisplay=abilitysystem
+DebugDisplay=abilitysystem
 
