--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -395,7 +395,7 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 PersonaPreviewSceneAnimationController=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/Input/InputActions/IA_Move.IA_Move
 InputAction=
-SkeletalMeshComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+SkeletalMeshComponent=
 BP_Goblin_Spear_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 K2Node_VariableGet=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.ProgressBarFillImage,K2Node_VariableGet.DefaultValueCategory.BackgroundBrush,K2Node_VariableGet.DefaultValueCategory.GlassBrush,K2Node_VariableGet.DefaultValueCategory.ProgressBarFillImage
 BP_EnemyBase_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Combat.Collision,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
@@ -733,9 +733,10 @@ BP_ManaGlobe_C="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -753,9 +754,8 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-OpenAssetsAtExit=/Game/Maps/MyMap1.MyMap1:PersistentLevel.MyMap1
-OpenAssetsAtExit=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter
-OpenAssetsAtExit=/Game/Blueprints/UI/Overlay/WBP_Overlay.WBP_Overlay
+OpenAssetsAtExit=/Game/Blueprints/UI/Overlay/BP_AuraHUD.BP_AuraHUD
+OpenAssetsAtExit=/Game/Blueprints/Game/BP_AuraGameMode.BP_AuraGameMode
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -770,7 +770,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/UI/ProgressBar
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2153,6 +2153,14 @@ BP_ManaGlobe_C.Rendering=True
 BP_ManaGlobe_C.Navigation=True
 BP_ManaGlobe_C.Localization=True
 BP_ManaGlobe_C.Events=True
+BP_AuraHUD_C.HUD=True
+BP_AuraHUD_C.Tick=True
+BP_AuraHUD_C.Collision=True
+BP_AuraHUD_C.HLOD=True
+BP_AuraHUD_C.AuraHUD=True
+BP_AuraHUD_C.Physics=True
+BP_AuraHUD_C.WorldPartition=True
+BP_AuraHUD_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2465,6 +2473,7 @@ MRUItem19=/Game/Assets/Enemies/Shaman/ShamanStaff/PA_ShamanStaff
 /Game/Blueprints/UI/ProgressBar/BP_GlobeProgressBarBase.BP_GlobeProgressBarBase=0
 /Game/Maps/MyMap1.MyMap1:PersistentLevel.MyMap1=0
 /Game/Blueprints/UI/Overlay/WBP_Overlay.WBP_Overlay=0
+/Game/Blueprints/UI/Overlay/BP_AuraHUD.BP_AuraHUD=0
 
 [MaterialEditor]
 PrimType=3
@@ -2646,7 +2655,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=70.400 Y=14.400
-WindowSize=X=1432.000 Y=861.600
+WindowSize=X=1439.200 Y=861.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3785,7 +3794,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.14-20.14.12
+Aura.TimeStamp=2023.12.15-16.28.38
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.14-15.12.33
 RD.LastCompileMethod=External
@@ -3933,27 +3942,28 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem1=/Game/Maps/MyMap1
-MRUItem2=/Game/Blueprints/Game/BP_AuraGameMode
-MRUItem3=/Game/Blueprints/UI/Overlay/WBP_Overlay
-MRUItem4=/Game/Blueprints/UI/ProgressBar/BP_HealthGlobe
-MRUItem5=/Game/Blueprints/UI/ProgressBar/BP_GlobeProgressBarBase
-MRUItem6=/Game/Blueprints/Items/BP_HealthPotion
-MRUItem7=/Game/Blueprints/Player/BP_AuraPlayerState
-MRUItem8=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
-MRUItem9=/Game/Blueprints/Character/BP_EnemyBase
-MRUItem10=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
-MRUItem11=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
-MRUItem12=/Game/Blueprints/Player/BP_AuraPlayerController
-MRUItem13=/Game/Blueprints/Input/IMC_AuraContext
-MRUItem14=/Game/Blueprints/Input/InputActions/IA_Move
-MRUItem15=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
-MRUItem16=/Game/Assets/Enemies/Goblin/SKM_Goblin
-MRUItem17=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
-MRUItem18=/Game/Blueprints/Character/ABP_Enemy
-MRUItem19=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
-MRUItem20=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem0=/Game/Blueprints/Game/BP_AuraGameMode
+MRUItem1=/Game/Blueprints/UI/Overlay/BP_AuraHUD
+MRUItem2=/Game/Blueprints/UI/Overlay/WBP_Overlay
+MRUItem3=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem4=/Game/Maps/MyMap1
+MRUItem5=/Game/Blueprints/UI/ProgressBar/BP_HealthGlobe
+MRUItem6=/Game/Blueprints/UI/ProgressBar/BP_GlobeProgressBarBase
+MRUItem7=/Game/Blueprints/Items/BP_HealthPotion
+MRUItem8=/Game/Blueprints/Player/BP_AuraPlayerState
+MRUItem9=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
+MRUItem10=/Game/Blueprints/Character/BP_EnemyBase
+MRUItem11=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
+MRUItem12=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem13=/Game/Blueprints/Player/BP_AuraPlayerController
+MRUItem14=/Game/Blueprints/Input/IMC_AuraContext
+MRUItem15=/Game/Blueprints/Input/InputActions/IA_Move
+MRUItem16=/Game/Blueprints/Character/Goblin_Slingshot/ABP_Goblin_Slingshot
+MRUItem17=/Game/Assets/Enemies/Goblin/SKM_Goblin
+MRUItem18=/Game/Blueprints/Character/Goblin_Spear/ABP_Goblin_Spear
+MRUItem19=/Game/Blueprints/Character/ABP_Enemy
+MRUItem20=/Game/Assets/Enemies/Goblin/Animations/Spear/Attack_Spear
+MRUItem21=/Game/Assets/Characters/Aura/SKM_Aura
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
