--- a/Aura/Saved/Config/WindowsEditor/Input.ini
+++ b/Aura/Saved/Config/WindowsEditor/Input.ini
@@ -1,4 +1,6 @@
 [/Script/Engine.Console]
 HistoryBuffer=debug abilitysystem
 HistoryBuffer=showdebug abilitysystem
+HistoryBuffer=show debug
+HistoryBuffer=showdebug
 
