Gameplay Effects AuraEffectActor Improved
5.37-5.38 Gameplay Effect Functionality added to AuraEffectActor to be called in blueprints.

--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,10 +99,10 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 PrimaryPIEClientIndex=0
 ServerPort=17777
 ClientWindowWidth=640
@@ -128,6 +128,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1298
 NewWindowHeight=840
 MultipleInstancePositions=(X=1280,Y=720)
+MultipleInstancePositions=(X=2050,Y=528)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -426,6 +427,8 @@ K2Node=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.TransformCommon.Tran
 BP_AuraPlayerController_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 SceneComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 BP_AuraPlayerState_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+StaticMeshComponent=StaticMeshComponent.Collision.Collision
+SphereComponent=SphereComponent.Collision.Collision
 
 [EditorStartup]
 LastLevel=/Game/Maps/MyMap1
@@ -433,7 +436,7 @@ LastLevel=/Game/Maps/MyMap1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -657,7 +660,7 @@ PrimitiveComponent="\"Object\" "
 LandscapeComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 PersonaPreviewSceneAnimationController="\"Object\" "
 PersonaPreviewSceneController="\"Object\" "
 BP_Goblin_Spear_C="\"Object\" \"Object.Combat.Weapon\" \"Object.Combat.Weapon.Object.Mesh\" \"Object.Combat.Weapon.Object.MaterialParameters\" \"Object.Combat.Weapon.Object.Mobile\" \"Object.Combat.Weapon.Object.Animation\" \"Object.Combat.Weapon.Object.Activation\" \"Object.Combat.Weapon.Object.SkeletalMesh\" \"Object.Combat.Weapon.Object.Physics\" \"Object.Combat.Weapon.Object.PathTracing\" \"Object.Combat.Weapon.Object.Clothing\" \"Object.Combat.Weapon.Object.Collision\" \"Object.Combat.Weapon.Object.Collision.BodyInstance\" \"Object.Combat.Weapon.Object.LeaderPoseComponent\" \"Object.Combat.Weapon.Object.LOD\" \"Object.Combat.Weapon.Object.Lighting\" \"Object.Combat.Weapon.Object.Lighting.LightingChannels\" \"Object.Combat.Weapon.Object.Optimization\" \"Object.Combat.Weapon.Object.Deformer\" \"Object.Combat.Weapon.Object.Rendering\" \"Object.Combat.Weapon.Object.RayTracing\" \"Object.Combat.Weapon.Object.HLOD\" \"Object.Combat.Weapon.Object.TextureStreaming\" \"Object.Combat.Weapon.Object.Transform\" \"Object.Combat.Weapon.Object.Transform.RelativeRotation\" \"Object.Combat.Weapon.Object.Tags\" \"Object.Combat.Weapon.Object.Navigation\" \"Object.Combat.Weapon.Object.VirtualTexture\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -716,7 +719,7 @@ GameModeBase="\"Object\" "
 GameplayEffectCreationMenu="\"Object\" "
 DataRegistrySettings="\"Object\" "
 SphereComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" "
 ContentWidget="\"Object\" "
 PanelWidget="\"Object\" "
@@ -745,6 +748,7 @@ WBP_ManaGlobe_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=True
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -759,7 +763,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -768,6 +771,7 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
+OpenAssetsAtExit=/Game/Blueprints/Items/BP_HealthPotion.BP_HealthPotion
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2750,7 +2754,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=70.400 Y=14.400
-WindowSize=X=1489.600 Y=861.600
+WindowSize=X=1493.200 Y=861.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3889,7 +3893,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.20-19.43.51
+Aura.TimeStamp=2023.12.20-21.19.32
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.20-15.39.10
 RD.LastCompileMethod=External
@@ -4037,16 +4041,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/UI/Overlay/WBP_Overlay
-MRUItem1=/Game/Blueprints/UI/ProgressBar/WBP_GlobeProgressBarBase
-MRUItem2=/Game/Blueprints/UI/ProgressBar/WBP_ManaGlobe
-MRUItem3=/Game/Blueprints/UI/ProgressBar/WBP_HealthGlobe
-MRUItem4=/Game/Blueprints/UI/HUD/BP_AuraHUD
-MRUItem5=/Game/Blueprints/Game/BP_AuraGameMode
-MRUItem6=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
-MRUItem7=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem8=/Game/Maps/MyMap1
-MRUItem9=/Game/Blueprints/Items/BP_HealthPotion
+MRUItem0=/Game/Blueprints/Items/BP_HealthPotion
+MRUItem1=/Game/Blueprints/UI/ProgressBar/WBP_ManaGlobe
+MRUItem2=/Game/Blueprints/UI/Overlay/WBP_Overlay
+MRUItem3=/Game/Blueprints/UI/ProgressBar/WBP_GlobeProgressBarBase
+MRUItem4=/Game/Blueprints/UI/ProgressBar/WBP_HealthGlobe
+MRUItem5=/Game/Blueprints/UI/HUD/BP_AuraHUD
+MRUItem6=/Game/Blueprints/Game/BP_AuraGameMode
+MRUItem7=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem8=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem9=/Game/Maps/MyMap1
 MRUItem10=/Game/Blueprints/Player/BP_AuraPlayerState
 MRUItem11=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
 MRUItem12=/Game/Blueprints/Character/BP_EnemyBase
