Started Attribute Tag System
7.49 - 7.54

--- a/Aura/Saved/Config/WindowsEditor/Input.ini
+++ b/Aura/Saved/Config/WindowsEditor/Input.ini
@@ -1,6 +1,7 @@
 [/Script/Engine.Console]
 HistoryBuffer=debug abilitysystem
 HistoryBuffer=showdebug abilitysystem
+HistoryBuffer=debug
 HistoryBuffer=show debug
 HistoryBuffer=showdebug
 
