Message Tag Data Table
7.57 Added new Tags for Messages and a Data Table for them in Editor and added a property to the OverlayWidgetController for that DataTable. Will use this to parse the tags.

--- a/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,10 +1,18 @@
 [GameplayTagPicker]
 ManagerAttributes.Expanded=True
-ManagerAttributes.Vital.Expanded=True
+ManagerAttributes.Vital.Expanded=False
 ManagerAttributes.Vital.Health.Expanded=True
 ManagerAttributes.Vital.Mana.Expanded=True
 ManagerAttributes.Vital.MaxHealth.Expanded=True
 ManagerAttributes.Vital.MaxMana.Expanded=True
 Attributes.Expanded=True
 Attributes.Vital.Expanded=True
+ManagerMessage.HealthPotion.Expanded=True
+ManagerMessage.Expanded=False
+ManagerMessage.ManaPotion.Expanded=True
+ManagerMessage.HealthCrystal.Expanded=True
+ManagerMessage.ManaCrystal.Expanded=True
+ManagerMessage.Elixir.Expanded=True
+ManagerTests.Expanded=False
+ManagerInputUserSettings.Expanded=False
 
