Message Tag Data Table
7.57 - 7.60 Added new Tags for Messages and a Data Table for them in Editor and added a property to the OverlayWidgetController for that DataTable. Then parsed the table and broadcast the data from the row by tag. Displayed the message from the table using print string.

Next: we will display with message widget

--- a/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -15,4 +15,5 @@ ManagerMessage.ManaCrystal.Expanded=True
 ManagerMessage.Elixir.Expanded=True
 ManagerTests.Expanded=False
 ManagerInputUserSettings.Expanded=False
+Message.Expanded=True
 
