Open/Close Menu + Setting up Attribute Display
9.83 - 9.91

Functionality for opening and closing the attribute menu.
GameplayTag singleton.
Aura Asset Manager.
Native gameplay tags.
Filled out the DA_AttributeInfo blueprint with details about attribute set.
Created AttributeMenuWidgetController.
Added AuraAbilitySystemBPLibrary for making our widget controllers singleton.
Added the overlay widget to it.
Attribute Menu add in progress.

--- a/Aura/Config/DefaultEngine.ini
+++ b/Aura/Config/DefaultEngine.ini
@@ -57,6 +57,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
 SmallFontName=/Game/Assets/Fonts/David_Libre/DavidLibre-Regular_Font.DavidLibre-Regular_Font
 TinyFontName=/Game/Assets/Fonts/David_Libre/DavidLibre-Medium_Font.DavidLibre-Medium_Font
+AssetManagerClassName=/Script/Aura.AuraAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
