--- a/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,6 +1,6 @@
 [GameplayTagPicker]
 ManagerAttributes.Expanded=True
-ManagerAttributes.Vital.Expanded=False
+ManagerAttributes.Vital.Expanded=True
 ManagerAttributes.Vital.Health.Expanded=True
 ManagerAttributes.Vital.Mana.Expanded=True
 ManagerAttributes.Vital.MaxHealth.Expanded=True
@@ -16,4 +16,8 @@ ManagerMessage.Elixir.Expanded=True
 ManagerTests.Expanded=False
 ManagerInputUserSettings.Expanded=False
 Message.Expanded=True
+ManagerAttributes.Secondary.Expanded=True
+ManagerAttributes.Primary.Expanded=True
+Attributes.Primary.Expanded=False
+Attributes.Secondary.Expanded=True
 
