AttributeMenuWidgetController Delegate and Attribute Tags
9.93-9.94

--- a/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -18,6 +18,6 @@ ManagerInputUserSettings.Expanded=False
 Message.Expanded=True
 ManagerAttributes.Secondary.Expanded=True
 ManagerAttributes.Primary.Expanded=True
-Attributes.Primary.Expanded=False
+Attributes.Primary.Expanded=True
 Attributes.Secondary.Expanded=True
 
