Auto Run Functional
10.107

Click to move is working now. Click and release moves to the point clicked. Uses Nav Mesh to path around obstacles. Click and hold, the character follows the mouse.

--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -26,7 +26,6 @@ bPreviewFeatureLevelActive=False
 bPreviewFeatureLevelWasDefault=True
 PreviewDeviceProfileName=None
 bAutomaticallyHotReloadNewClasses=False
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.EditorStyleSettings]
 bColorVisionDeficiencyCorrection=False
@@ -405,7 +404,7 @@ Blueprint=
 CapsuleComponent=
 PlayerStart=BP_Goblin_Spear_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision
 PostProcessVolume=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,BP_AuraCharacter_C.Collision.Collision,BP_AuraCharacter_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.ProgressBarFillImage,PropertyWrapper.DefaultValueCategory.GhostBarFillImage,K2Node_VariableGet.DefaultValueCategory.BackgroundBrush,K2Node_VariableGet.DefaultValueCategory.GlassBrush,K2Node_VariableGet.DefaultValueCategory.ProgressBarFillImage,K2Node_VariableGet.DefaultValueCategory.InstantEffects
-BrushComponent=
+BrushComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,BP_AuraCharacter_C.Collision.Collision,BP_AuraCharacter_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.ProgressBarFillImage,PropertyWrapper.DefaultValueCategory.GhostBarFillImage,K2Node_VariableGet.DefaultValueCategory.BackgroundBrush,K2Node_VariableGet.DefaultValueCategory.GlassBrush,K2Node_VariableGet.DefaultValueCategory.ProgressBarFillImage,K2Node_VariableGet.DefaultValueCategory.InstantEffects
 BP_AuraCharacter_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,BP_AuraCharacter_C.Collision.Collision,BP_AuraCharacter_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 CameraComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
 GameplayEffectCreationMenu=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,GameMapsSettings.DefaultModes.SelectedGameModeDetails
@@ -461,6 +460,7 @@ K2Node_CallParentFunction=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.C
 GA_TestGameplayAbility_C=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.ProgressBarFillImage,PropertyWrapper.DefaultValueCategory.PressedBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillImage,PropertyWrapper.DefaultValueCategory.BackgroundBrush,PropertyWrapper.DefaultValueCategory.ButtonBorderBrush,PropertyWrapper.DefaultValueCategory.NormalBrush,PropertyWrapper.DefaultValueCategory.HoveredBrush,PropertyWrapper.DefaultValueCategory.DisabledBrush,PropertyWrapper.DefaultValueCategory.Outline Settings,K2Node_VariableGet.DefaultValueCategory.BackgroundBrush,K2Node_VariableGet.DefaultValueCategory.BorderBrush,K2Node_VariableGet.DefaultValueCategory.GlassBrush,K2Node_VariableGet.DefaultValueCategory.ProgressBarFillImage,K2Node_VariableGet.DefaultValueCategory.InstantEffects,K2Node_VariableGet.DefaultValueCategory.In Brush,K2Node_VariableGet.DefaultValueCategory.Outline Settings
 NavMeshBoundsVolume=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.TransformCommon.Transform,BP_AuraCharacter_C.Collision.Collision,BP_AuraCharacter_C.Combat.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.ProgressBarFillImage,PropertyWrapper.DefaultValueCategory.GhostBarFillImage,K2Node_VariableGet.DefaultValueCategory.BackgroundBrush,K2Node_VariableGet.DefaultValueCategory.GlassBrush,K2Node_VariableGet.DefaultValueCategory.ProgressBarFillImage,K2Node_VariableGet.DefaultValueCategory.InstantEffects
 CharacterMovementComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Spear_C.Collision.Collision,BP_Goblin_Spear_C.TransformCommon.Transform,BP_Goblin_Spear_C.Physics.ConstraintsGroup,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Collision.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Physics.ConstraintsGroup,BP_EnemyBase_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+StaticMeshActor=StaticMeshActor.Collision.Collision
 
 [EditorStartup]
 LastLevel=/Game/Maps/MyMap1
@@ -842,10 +842,11 @@ NavMeshBoundsVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushS
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=True
+DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -876,8 +877,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/Character/Aura/BP_AuraCharacter.BP_AuraCharacter
-OpenAssetsAtExit=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear.BP_Goblin_Spear
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1154,6 +1153,9 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -4627,7 +4629,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2024.02.01-03.15.34
+Aura.TimeStamp=2024.02.01-19.55.44
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.20-15.39.10
 RD.LastCompileMethod=External
