PlayerController and AbilitySystemComponent Refactor
10.108

--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,10 +99,10 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 PrimaryPIEClientIndex=0
 ServerPort=17777
 ClientWindowWidth=640
@@ -128,7 +128,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1325
 NewWindowHeight=1020
 MultipleInstancePositions=(X=1280,Y=720)
-MultipleInstancePositions=(X=2050,Y=528)
+MultipleInstancePositions=(X=2296,Y=408)
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -846,7 +847,7 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.B
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=False
+DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -3489,9 +3490,9 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=22.400
+ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1533.600 Y=861.600
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -4629,7 +4630,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2024.02.01-19.55.44
+Aura.TimeStamp=2024.02.02-20.14.13
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.20-15.39.10
 RD.LastCompileMethod=External
@@ -4661,6 +4662,8 @@ CurveTableEditor.TimeStamp=2023.11.25-05.20.27
 CurveTableEditor.LastCompileMethod=Unknown
 DataTableEditor.TimeStamp=2023.11.25-05.20.27
 DataTableEditor.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2023.11.25-05.20.34
+PerfCounters.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
