Ghost Health Bar and Improved Health Bar UX
Trailing ghost health bar set up. Hide health bar when not updating set.

--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -295,13 +295,16 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision
 SceneComponent=BP_Goblin_Spear_C.Combat.Collision,BP_Goblin_Slingshot_C.Combat.Collision,BP_Goblin_Slingshot_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.Physics.ConstraintsGroup,BP_AuraCharacter_C.Combat.Collision,BP_AuraCharacter_C.Collision.Collision
 SphereComponent=SphereComponent.Collision.Collision
 BP_EnemyBase_C=BP_EnemyBase_C.Physics.ConstraintsGroup
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush
-WBP_ProgressBar_C=
-K2Node_Variable=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
+WBP_ProgressBar_C=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush
-WidgetComponent=
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush
+WidgetComponent=BP_EnemyBase_C.Physics.ConstraintsGroup
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
 WBP_EnemyHealthBar_C=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush
+ProgressBar=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.FrontBarFillBrush,PropertyWrapper.DefaultValueCategory.GhostBarFillBrush,K2Node_VariableGet.DefaultValueCategory.GhostBarFillBrush
 
 [EditorStartup]
 LastLevel=/Game/Maps/MyMap1
@@ -1600,6 +1603,7 @@ Overlay="\"Object\" "
 ProgressBar="\"Object\" "
 WidgetComponent="\"Object\" "
 WBP_EnemyHealthBar_C="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2075,7 +2079,7 @@ WmfMediaSettings.Debug=True
 AssetManagerSettings.Asset Registry=True
 AN_MontageEvent_C.AnimNotify=True
 K2Node_FunctionResult.Graph=True
-PropertyWrapper.Variable=True
+PropertyWrapper.Variable=False
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
@@ -2570,6 +2574,8 @@ WBP_EnemyHealthBar_C.Navigation=True
 WBP_ProgressBar_C.Default=True
 PropertyWrapper.Events=True
 K2Node_VariableSet.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2599,7 +2605,6 @@ RecentAssetEditors=
 OpenAssetsAtExit=/Game/Blueprints/UI/ProgressBar/WBP_ProgressBar.WBP_ProgressBar
 OpenAssetsAtExit=/Game/Blueprints/Character/BP_EnemyBase.BP_EnemyBase
 OpenAssetsAtExit=/Game/Blueprints/UI/ProgressBar/WBP_EnemyHealthBar.WBP_EnemyHealthBar
-OpenAssetsAtExit=/Game/Blueprints/AbilitySystem/GameplayEffects/GE_Damage.GE_Damage
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -2717,7 +2722,7 @@ PerWorldEditorSettings=(("/Game/Maps/MyMap1.MyMap1", (LoadedEditorRegions=((Min=
 
 [RootWindow]
 ScreenPosition=X=106.800 Y=50.800
-WindowSize=X=1506.800 Y=861.600
+WindowSize=X=1510.400 Y=861.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
